--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>9Values – Simplify Images for Drawing Reference</title>
+  <meta name="description" content="9Values helps artists convert photos into simplified grayscale references for sketching and painting. Free, fast, and easy to use." />
+
+  <!-- Open Graph for social media -->
+  <meta property="og:title" content="9Values – Simplify Images for Drawing Reference">
+  <meta property="og:description" content="Convert photos into simplified grayscale references for sketching and painting.">
+  <meta property="og:image" content="https://9values.com/IMG_4668.png">
+  <meta property="og:url" content="https://9values.com">
+  <meta name="twitter:card" content="summary_large_image">
+
   <style>
     body {
       margin: 0;
@@ -28,7 +37,8 @@
   </style>
 </head>
 <body>
-  <header>✏️ 9Values – Drawing Simplified</header>
-  <iframe src="https://9values-9values.hf.space"></iframe>
+  <header>✏️ 9Values – Simplify Images for Drawing Reference</header>
+  <iframe src="https://9values-9values.hf.space" title="9Values Drawing Reference Tool"></iframe>
 </body>
 </html>
+
