--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <title>9Values – Simplify Images for Drawing Reference</title>
   <meta name="description" content="9Values helps artists convert photos into simplified grayscale references for sketching and painting. Free, fast, and easy to use." />
 
-  <!-- Open Graph for social media -->
+  <!-- Counter.dev Analytics -->
+  <script src="https://cdn.counter.dev/script.js" data-id="9values.counter.dev" data-utcoffset="0"></script>
+
+  <!-- Open Graph (Social Sharing) -->
   <meta property="og:title" content="9Values – Simplify Images for Drawing Reference">
   <meta property="og:description" content="Convert photos into simplified grayscale references for sketching and painting.">
   <meta property="og:image" content="https://9values.com/IMG_4668.png">
