--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
   <title>9Values – Simplify Images for Drawing Reference</title>
   <meta name="description" content="9Values helps artists convert photos into simplified grayscale references for sketching and painting. Free, fast, and easy to use." />
 
-  <!-- Counter.dev Analytics -->
-  <script src="https://cdn.counter.dev/script.js" data-id="9values.counter.dev" data-utcoffset="0"></script>
-
   <!-- Open Graph (Social Sharing) -->
   <meta property="og:title" content="9Values – Simplify Images for Drawing Reference">
   <meta property="og:description" content="Convert photos into simplified grayscale references for sketching and painting.">
@@ -35,13 +32,23 @@
     iframe {
       border: none;
       width: 100%;
-      height: calc(100vh - 80px);
+      height: calc(100vh - 120px); /* room for footer */
+    }
+    footer {
+      text-align: center;
+      font-size: 0.8rem;
+      color: #777;
+      padding: 10px;
     }
   </style>
 </head>
 <body>
   <header>✏️ 9Values – Simplify Images for Drawing Reference</header>
   <iframe src="https://9values-9values.hf.space" title="9Values Drawing Reference Tool"></iframe>
+  <footer>
+    Built for artists. No tracking. Your images stay private.
+  </footer>
 </body>
 </html>
+
 
