--- a/index.html
+++ b/index.html
@@ -40,25 +40,57 @@
       color: #777;
       padding: 10px;
     }
+    .comparison-section {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+      padding: 20px;
+      background: #fff;
+    }
+    .comparison-section img {
+      max-width: 300px;
+      width: 100%;
+      height: auto;
+      border: 1px solid #ccc;
+    }
+    .comparison-caption {
+      text-align: center;
+      font-size: 0.9rem;
+      margin-top: 5px;
+    }
+    .credit {
+      text-align: center;
+      font-size: 0.8rem;
+      color: #555;
+      margin-top: -10px;
+    }
+    .try-header {
+      text-align: center;
+      font-weight: normal;
+      padding-top: 10px;
+      font-size: 1.2rem;
+    }
   </style>
 </head>
 <body>
   <header>✏️ 9Values – Simplify Images for Drawing Reference</header>
 
-  <section style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; padding: 20px; background: #fff;">
-    <div style="flex: 1; max-width: 400px;">
-      <img src="0670_repro_2.jpg" alt="Original painting - Girl with a Pearl Earring" style="width: 100%; height: auto; border: 1px solid #ccc;">
-      <p style="text-align: center; font-size: 0.9rem;">Original – <em>Girl with a Pearl Earring</em></p>
+  <section class="comparison-section">
+    <div>
+      <img src="0670_repro_2.jpg" alt="Original painting - Girl with a Pearl Earring">
+      <p class="comparison-caption">Original – <em>Girl with a Pearl Earring</em></p>
     </div>
-    <div style="flex: 1; max-width: 400px;">
-      <img src="image-4.webp" alt="Simplified 9Values version of painting" style="width: 100%; height: auto; border: 1px solid #ccc;">
-      <p style="text-align: center; font-size: 0.9rem;">Simplified Output (9Values)</p>
+    <div>
+      <img src="image-4.webp" alt="Simplified version of painting">
+      <p class="comparison-caption">Simplified Output</p>
     </div>
   </section>
-  <p style="text-align: center; font-size: 0.8rem; color: #555; margin-top: -10px;">
+  <p class="credit">
     Image credit: <strong>Mauritshuis, The Hague</strong>. Used for non-commercial educational demonstration.
   </p>
 
+  <h2 class="try-header">Try it yourself</h2>
   <iframe src="https://9values-9values.hf.space" title="9Values Drawing Reference Tool"></iframe>
 
   <footer>
@@ -66,6 +98,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
