--- a/index.html
+++ b/index.html
@@ -3,125 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <title>9Values – Simplify Images for Drawing Reference</title>
-  <meta name="description" content="9Values helps artists convert photos into simplified grayscale references for sketching and painting. Free, fast, and easy to use." />
-
-  <!-- Open Graph -->
-  <meta property="og:title" content="9Values – Simplify Images for Drawing Reference" />
-  <meta property="og:description" content="Convert photos into simplified grayscale references for sketching and painting." />
-  <meta property="og:image" content="https://9values.com/IMG_4668.png" />
-  <meta property="og:url" content="https://9values.com" />
-  <meta name="twitter:card" content="summary_large_image" />
-
+  <meta name="description" content="9Values helps artists convert photos into simplified grayscale references for sketching and painting." />
   <style>
     body {
       margin: 0;
-      font-family: sans-serif;
-      background-color: #f4f4f4;
+      font-family: 'Courier New', monospace;
+      background-color: #111;
+      color: #eee;
     }
 
     header {
       background-color: #111;
-      color: #fff;
-      padding: 20px;
+      color: #ffcc00;
+      padding: 16px;
       text-align: center;
-      font-size: 1.6rem;
+      font-size: 1.5rem;
       font-weight: bold;
-      letter-spacing: 1px;
+      text-shadow: 0 0 6px #ffcc00;
     }
 
-    .main-content {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      padding: 20px;
-      justify-content: center;
-    }
-
-    .iframe-wrapper {
-      flex: 1 1 600px;
-      min-width: 300px;
-    }
-
-    .iframe-wrapper iframe {
-      width: 100%;
-      height: 95vh;
+    iframe {
+      display: block;
+      width: 100vw;
+      height: calc(100vh - 60px);
       border: none;
-    }
-
-    .reference-images {
-      flex: 0 1 300px;
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      max-height: 95vh;
-      overflow-y: auto;
-    }
-
-    .reference-images img {
-      width: 100%;
-      height: auto;
-      border: 1px solid #ccc;
-    }
-
-    .caption {
-      text-align: center;
-      font-size: 0.9rem;
-    }
-
-    .credit {
-      text-align: center;
-      font-size: 0.8rem;
-      color: #555;
-      margin: 10px 0;
-    }
-
-    footer {
-      text-align: center;
-      font-size: 0.8rem;
-      color: #777;
-      padding: 10px;
-    }
-
-    @media (max-width: 768px) {
-      .iframe-wrapper iframe {
-        height: 65vh;
-      }
-
-      .reference-images {
-        max-height: none;
-        overflow: visible;
-      }
     }
   </style>
 </head>
 <body>
-  <header>✏️ 9Values – Simplify Images for Drawing Reference</header>
-
-  <div class="main-content">
-    <div class="iframe-wrapper">
-      <iframe src="https://9values-9values.hf.space" title="9Values Drawing Reference Tool"></iframe>
-    </div>
-
-    <div class="reference-images">
-      <div>
-        <img src="0670_repro_2.jpg" alt="Original painting - Girl with a Pearl Earring" />
-        <p class="caption">Original – <em>Girl with a Pearl Earring</em></p>
-      </div>
-      <div>
-        <img src="image-4.webp" alt="Simplified version of painting" />
-        <p class="caption">Simplified Output</p>
-      </div>
-    </div>
-  </div>
-
-  <p class="credit">
-    Image credit: <strong>Mauritshuis, The Hague</strong>. Used for non-commercial educational demonstration.
-  </p>
-
-  <footer>
-    Built for artists. No tracking. Your images stay private.
-  </footer>
+  <header>🕹️ 9Values – Pixel & Tone Playground</header>
+  <iframe src="https://9values-9values.hf.space" title="9Values Drawing Tool"></iframe>
 </body>
 </html>
